# Survey

./: .env.example  .gitignore  README.md  deployment.md  docker-compose.override.yml  docker-compose.yml
.github/: deploy.yml  pull_request_template.md
.github/workflows/: CICDInfraAndSurvey  CICDInfraAndSurvey.yml  backend-test.yml  build-and-push-images.yml  cdk-deploy.yml  frontend-test.yml  infra-setup.yml  on-demand-workflow.yml  test.yml
backend/: pyproject.toml
backend/app/: crud.py  main.py  models.py  utils.py
backend/app/api/: deps.py  main.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py  auth.py  inquiry.py  inquiry_history.py  item.py  response.py  schedule.py  scheduled_inquiry.py  theme.py  user.py
backend/app/services/: inquiries.py  schedule.py  scheduled_inquiries.py  users.py
backend/app/tests/: conftest.py
cdk/: app.py  cdk_stack.py  deploy.bat  destroy.bat  diagnosedeploy.py  load-env.bat  pyproject.toml  setenvvars.bat  synth-and-deploy.bat  synth.bat
cdk/cdk/: cdk_stack.py
cdk/tests/unit/: test_cdk_stack.py
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/__tests__/: example.test.ts
frontend/__tests__/common/: FormModal.test.tsx
frontend/e2e/: auth.setup.ts  config.ts
frontend/e2e/page-objects/: CategoriesPage.ts  (+4 more)
frontend/src/: initOpenAPI.ts  main.tsx  routeTree.gen.ts  theme.tsx
frontend/tests/: add-inquiry.spec.ts
infra/: BillingAlert.tf  ecr.tf  main.tf  state.tf  variables.tf
(+89 files in other folders)
